k8s/guinea-pig-2-pod.yaml
apiVersion: v1
kind: Pod
metadata:
  name: guinea-pig-2
spec:
  containers:
  - name: guinea-pig-2
    image: eratewsznjnxaunsoy42acr1.azurecr.io/guinea-pig:v1
    resources: {}
