k8s/guinea-pig-lab4-task5-pod.yaml
apiVersion: v1
kind: Pod
metadata:
  name: guinea-pig-lab4-task5
spec:
  containers:
  - name: api
    image: eratewsznjnxaunsoy42acr1.azurecr.io/guinea-pig:v1
    resources: {}
