k8s/lab-07-almost-healthy.yaml
apiVersion: v1
kind: Pod
metadata:
  name: lab-07-almost-healthy
spec:
  containers:
  - name: api
    image: eratewsznjnxaunsoy42acr.azurecr.io/guinea-pig:v4
    imagePullPolicy: IfNotPresent
    resources: {}
    livenessProbe:
      httpGet:
        path: /health/almost_healthy
        port: 80
      initialDelaySeconds: 3
      periodSeconds: 3
