k8s/lab-07-ready-unstable.yaml
apiVersion: v1
kind: Pod
metadata:
  name: lab-07-ready-unstable
spec:
  containers:
  - name: api
    image: eratewsznjnxaunsoy42acr1.azurecr.io/guinea-pig:v1
    imagePullPolicy: IfNotPresent
    resources: {}
    livenessProbe:
      httpGet:
        path: /health
        port: 80
      initialDelaySeconds: 3
      periodSeconds: 3    
    readinessProbe:
      httpGet:
        path: /readiness/unstable
        port: 80
      initialDelaySeconds: 3
      periodSeconds: 3
