k8s/lab-07-ready.yaml
apiVersion: v1
kind: Pod
metadata:
  name: lab-07-ready
spec:
  containers:
  - name: api
    image: eratewsznjnxaunsoy42acr.azurecr.io/guinea-pig:v1
    imagePullPolicy: IfNotPresent
    resources: {}
    livenessProbe:
      httpGet:
        path: /health
        port: 80
      initialDelaySeconds: 3
      periodSeconds: 3    
    readinessProbe:
      httpGet:
        path: /readiness
        port: 80
      initialDelaySeconds: 3
      periodSeconds: 3
