k8s/lab-08-task3-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: lab-08-task3
  labels:
    app: lab-08-task3
spec:
  replicas: 3
  selector:
    matchLabels:
      app: lab-08-task3
  template:
    metadata:
      labels:
        app: lab-08-task3
    spec:
      containers:
      - name: api
        image: eratewsznjnxaunsoy42acr.azurecr.io/guinea-pig:v1
        imagePullPolicy: IfNotPresent
        resources: {}
        livenessProbe:
          httpGet:
            path: /health
            port: 80
          initialDelaySeconds: 3
          periodSeconds: 3    
        readinessProbe:
          httpGet:
            path: /readiness
            port: 80
          initialDelaySeconds: 3
          periodSeconds: 3
