k8s/lab-10-task2-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: lab-10-task2
  labels:
    app: lab-10-task2
spec:
  replicas: 1
  selector:
    matchLabels:
      app: lab-10-task2
  template:
    metadata:
      labels:
        app: lab-10-task2
    spec:
      containers:
      - name: api
        image: eratewsznjnxaunsoy42acr.azurecr.io/guinea-pig:v1
        imagePullPolicy: IfNotPresent
        resources: {}
        volumeMounts:
        - name: secrets
          mountPath: /app/secrets
          readOnly: true          
      volumes:
      - name: secrets
        secret:
          secretName: secret-appsettings
