k8s/guinea-pig-lab11-task1-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: guinea-pig-lab11-task1
  labels:
    app: guinea-pig-lab11-task1
spec:
  replicas: 2
  selector:
    matchLabels:
      app: guinea-pig-lab11-task1
  template:
    metadata:
      labels:
        app: guinea-pig-lab11-task1
    spec:
      containers:
      - name: api
        image: eratewsznjnxaunsoy42acr.azurecr.io/guinea-pig:v1
        imagePullPolicy: IfNotPresent
        resources: {}
        livenessProbe:
          httpGet:
            path: /health
            port: 80
          initialDelaySeconds: 3
          periodSeconds: 3    
        readinessProbe:
          httpGet:
            path: /readiness
            port: 80
          initialDelaySeconds: 3
          periodSeconds: 3
---
apiVersion: v1
kind: Service
metadata:
  name: guinea-pig-lab11-task1-service
  labels:
    app: guinea-pig-lab11-task1
spec:
  ports:
  - port: 8081
    protocol: TCP
    targetPort: 80
  selector:
    app: guinea-pig-lab11-task1
  type: ClusterIP
